--- a/Freebies/app/src/main/res/values/strings.xml
+++ b/Freebies/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="drawer_close">Menu closed</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_about">AboutActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="about">About Page!</string>
 </resources>
