--- a/Freebies/app/src/main/res/values/strings.xml
+++ b/Freebies/app/src/main/res/values/strings.xml
@@ -5,7 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_about">AboutActivity</string>
+    <string name="action_simple_login">Facebook Login</string>
+    <string name="app_id">537154259756067</string>
+
 
     <string name="hello_world">Hello world!</string>
     <string name="about">About Page!</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
